# markitdown-with-assets

./: README.md  instruction.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
markitdown_ext/: README.md  cli.py
markitdown_ext/tests/: test_cli_assets.py
tests/: test_cli.py
